--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "requests-mock" %}
-{% set version = "1.11.0" %}
+{% set version = "1.12.1" %}
 
 package:
   name: {{ name }}
@@ -7,23 +7,24 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: ef10b572b489a5f28e09b708697208c4a3b2b89ef80a9f01584340ea357ec3c4
+  sha256: e9e12e333b525156e82a3c852f22016b9158220d2f47454de9cae8a77d371401
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
+  script_env:
+    - SETUPTOOLS_SCM_PRETEND_VERSION={{version}}
 
 requirements:
   host:
     - python
-    - pbr
     - pip
     - setuptools
+    - setuptools_scm
     - wheel
   run:
     - python
-    - requests >=2.3,<3
-    - six
+    - requests >=2.22,<3
 
 test:
   imports:
